--- a/index.html
+++ b/index.html
@@ -120,6 +120,66 @@
     </section>
     <!-- CARS end -->
     <!-- COMMENT start -->
+    <section class="comment">
+        <div class="container-comment">
+            <div class="content-title">
+                <h2>What Our Clients Are Saying</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut reiciendis, odio, eaque optio, neque minima excepturi quam ex necessitatibus distinctio ipsa commodi soluta explicabo tenetur!</p>    
+            </div>
+            <div class="content-items">
+                <div class="item-comment">
+                    <div class="picture"><img src="img/pic.jpg" alt=""></div>
+                    <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                    <p>Lorem ipsum dolor sit elit. Laboriosam, aperiam, quisquam velit, dolore repellendus nobis.</p>
+                    <h3>Felix Brandon</h3>
+                </div>
+                <div class="item-comment">
+                    <div class="picture"><img src="img/pic.jpg" alt=""></div>
+                    <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                    <p>Lorem ipsum dolor sit elit. Laboriosam, aperiam, quisquam velit, dolore repellendus nobis.</p>
+                    <h3>Carl Moonson</h3>
+                </div>
+                <div class="item-comment">
+                    <div class="picture"><img src="img/pic.jpg" alt=""></div>
+                    <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                    <p>Lorem ipsum dolor sit elit. Laboriosam, aperiam, quisquam velit, dolore repellendus nobis.</p>
+                    <h3>John Dou</h3>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- COMMENT end -->
+    <!-- GET STARTED start -->
+    <section class="get-started">
+        <div class="container-started">
+            <h2>Get Started with Lurex Today!</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non eligendi quae laboriosam libero, repudiandae quos?</p>
+            <div class="stickers">
+                <img src="img/app-store.png" alt="">
+                <img src="img/app-store-android.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- GET STARTED end -->
+    <!-- FOOTER start -->
+    <footer class="footer">
+        <div class="container-footer">
+            <div class="logo">
+                <h3>Lurex</h3>
+            </div>
+            <div class="last-menu">
+                <a href="">About</a>
+                <a href="">Service</a>
+                <a href="">Cars</a>
+                <a href="">FAQ</a>
+            </div>
+            <div class="rrss">
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+        </div>
+    </footer>
+    <!-- FOOTER end -->
 </body>
 </html>
